fixed visual bug on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,12 +27,15 @@ header {
 	width: 50%;
 	margin-left: 25%;
 	margin-right: 25%;
+	top: 25px;
 	padding: 0;
 }
 
 
 aside {
-	right: 15px;
+	margin: 0px;
+	right: 25px;
+	bottom: 25px;
 	text-align: right;
 	position: fixed;
 	user-select: none;
@@ -56,4 +59,5 @@ li {
 	border: 2px solid #ff784f;
 	display: block;
 	background: #0b1416;
+	margin: 0px;
 }
